// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-layout Components Card Renders Card 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  background-color: #surface;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.23);
  border-radius: 4px;
  padding: 10px;
}

<div
  className="c0"
/>
`;

exports[`ui-elements-layout Components Card Renders Card with children 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  background-color: #surface;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.23);
  border-radius: 4px;
  padding: 10px;
}

<div
  className="c0"
>
  Content
</div>
`;
